--- a/resume.html
+++ b/resume.html
@@ -74,7 +74,7 @@
 			<a href="#techSkills"><li id = "nav1">Skills</li></a>
 			<a href="#workExperience"><li id = "nav2">Work Experience</li></a>
 			<a href="#studentOrg"><li id = "nav3">Leadership Experience</li></a>
-			<a href="#projectsSection"><li id = "nav4" onclick = "highlightLastSection()">Featured Projects</li></a>
+			<a href="#projectsSection"><li id = "nav4">Featured Projects</li></a>
 			<a href="#"><li>Back to Top &uarr;</li></a>
 		</ul>
 
@@ -94,7 +94,7 @@
   <section id = "resume">
   	<div class = "container">
   	   <div class = "mainContent">
-				 <center><button class = "downloadButton">View PDF Version</button></center>
+				 <center><a href = "Resume_StephanieYip.pdf"><button class = "downloadButton">View PDF Version</button></a></center>
 
           <!-- Education -->
           <section id = "education">
@@ -115,8 +115,8 @@
               <h2>Academic Honors</h2>
 							<ul>
 								<li>Graduated <i>cum laude</i> (3.6 GPA)</li>
-								<li><a href = "https://www.tbp.org/home.cfm">Tau Beta Pi</a> (Top fifth of class among all engineering majors)</li>
-								<li><a href = "https://hkn.ieee.org/">IEEE HKN (Eta Kappa Nu)</a> (Top third of electrical and computer engineering class)</li>
+								<li><a href = "https://www.tbp.org/home.cfm" class = "links">Tau Beta Pi</a> (Top fifth of class among all engineering majors)</li>
+								<li><a href = "https://hkn.ieee.org/" class = "links">IEEE HKN (Eta Kappa Nu)</a> (Top third of electrical and computer engineering class)</li>
 							</ul>
             </section>
 
@@ -153,7 +153,7 @@
 
 						<h2>Software</h2>
 						<div class = "resumeContent">
-							Visual Studio, Git, Adobe Photoshop
+							Visual Studio, Git, Adobe Photoshop, WindRiver Workbench
 						</div>
 
 						<h2>Languages</h2>
@@ -172,9 +172,8 @@
 							<div class = "resumeLocation">St. Louis, MO</div>
             	<span class = "resumeRight">Aug. 2017 - Present</span>
 							<ul>
-								<li>Debugged and ran regression tests for Windows, Linux, and VxWorks platforms</li>
-								<li>Experience with Agile/ Scrum development methodology</li>
-								<li>Used WindRiver Workbench and Visual Studio for software development and debugging</li>
+								<li>Performed regression testing for Windows, Linux, and VxWorks platforms</li>
+								<li>Experience in Agile/ Scrum methodlogy with bi-weekly stand-up meetings and two-week sprints</li>
 							</ul>
 						</div>
 
@@ -185,7 +184,7 @@
 							<ul>
 								<li>Contributed to the development of a proximity sensor using an ARM microcontroller</li>
 								<li>Used MATLAB and an oscilloscope for signal processing testing and verification</li>
-								<li>Modified and debugged embedded software code in C to operate the analog to digital converter (ADC) and digital to analog converter (DAC) on the microcontroller</li>
+								<li>Modified embedded software code in C to operate the Analog to Digital Converter (ADC) and Digital to Analog Converter (DAC) on the micro-controller</li>
 							</ul>
 						</div>
 
@@ -204,21 +203,22 @@
 							<div class = "resumeLocation">Seattle University</div>
 							<span class = "resumeRight">Sept. 2016 - Jun. 2017</span>
 							<ul>
-								<li>Managed finances and budget, participated in fundraising, and mentored new officers</li>
+								<li>Helped fundraise over $200 through bake sales</li>
+								<li>Mentored new officers by helping them with their roles</li>
 							</ul>
 						</div>
 
 						<div class = "resumeContent"><span class = "resumeHeading">Regional Collegiate Communications Editor (RCCE)</span>
 							<span class = "resumeRight">Sept. 2016 - Jun. 2017</span>
 							<ul>
-								<li>Wrote content for the <a href = "https://regionj.wordpress.com/">Region J SWE blog</a>
+								<li>Wrote content for the <a href = "https://regionj.wordpress.com/" class = "links">Region J SWE blog</a>
 									about news and tips for increasing SWE involvement</li>
 								<ul>
-									<li> Blog Posts: <a href = "https://regionj.wordpress.com/2017/02/20/fy17-rcce-introduction/">Introduction</a>,
-										<a href = "https://regionj.wordpress.com/2017/02/27/rcr-introduction-university-of-portland-feature/">Industry Panels</a>,
-										<a href = "https://regionj.wordpress.com/2017/05/23/end-of-rcce-term-collegiate-section-features-george-fox-oregon-state/">End of Year</a> </li>
+									<li> Blog Posts: <a href = "https://regionj.wordpress.com/2017/02/20/fy17-rcce-introduction/" class = "links">Introduction</a>,
+										<a href = "https://regionj.wordpress.com/2017/02/27/rcr-introduction-university-of-portland-feature/" class = "links">Industry Panels</a>,
+										<a href = "https://regionj.wordpress.com/2017/05/23/end-of-rcce-term-collegiate-section-features-george-fox-oregon-state/" class = "links">End of Year</a> </li>
 								</ul>
-								<li>Communicated with other regional leaders and members through e-mail and Skype calls</li>
+								<li>Selected as a participant of the Collegiate Leadership Institute and received a travel stipend to the SWE national conference in 2016</li>
 							</ul>
 						</div>
 
@@ -227,39 +227,39 @@
 							<span class = "resumeRight">Sept. 2015 - Jun. 2016</span>
 							<ul>
 								<li>Organized resume review event with about 12 engineering professionals and 40 students attending</li>
-								<li>Regularly updated school website with events and news</li>
 							</ul>
 						</div>
 
 
 					</section>
 
-          <!-- Projects  -->
+					<!-- Projects  -->
 					<section id = "projectsSection">
 						<div class = "line"></div>
 						<h1>Featured Projects</h1>
 
 						<div class = "projectContainer">
-							<a href = "projects.html#rainGauge" class = "projectBox" id = "sensors">
+							<a href = "rainGauge.html" class = "projectBox" id = "sensors">
 
 								<h2>Electronic Rain Gauge</h2>
 
 							</a>
 
-							<a href = "projects.html#smartLightProj" class = "projectBox" id = "smartLight">
+							<a href = "smartLight.html" class = "projectBox" id = "smartLight">
 								<h2>Smart Light System</h2>
 								<div class = "resumeContent"></div>
 							</a>
 
-							<a href = "projects.html#puppetProj" class = "projectBox" id = "puppet">
+							<a href = "puppet.html" class = "projectBox" id = "puppet">
 								<h2>Automated Dancing Puppet</h2>
 							</a>
 						</div>
 
+						<a href = "projects.html"><button class = "projRevealBtn">See more projects <i class="fas fa-angle-double-right"></i></button></a>
 
-					</section>
+					</section> <!--END projects section -->
 
-  	    </div>
+  	    </div> <!-- END main content-->
   	</div>
   </section>
 
