Text edits. Added "Back to Top" in responsive Resume.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 							integration of hardware and software. I enjoy working on projects that
 							involve both electrical engineering and computer science and seeing
 							how the two fields interact with one another. Lately, I have also been interested
-							in learning more about software and technology further up the stack.
+							in learning more about software engineering and web applications.
 						 </p>
 						<p>This website serves as a portfolio of both my engineering experiences and personal interests.</p>
 
