--- a/resume.html
+++ b/resume.html
@@ -75,7 +75,7 @@
 			<a href="#workExperience"><li id = "nav2">Work Experience</li></a>
 			<a href="#studentOrg"><li id = "nav3">Leadership Experience</li></a>
 			<a href="#projectsSection"><li id = "nav4">Featured Projects</li></a>
-			<a href="#"><li>Back to Top &uarr;</li></a>
+			<a href="#"><li>Back to Top &#x2191;</li></a>
 		</ul>
 
 	</aside>
@@ -114,9 +114,9 @@
             <section>
               <h2>Academic Honors</h2>
 							<ul>
-								<li>Graduated <i>cum laude</i> (3.6 GPA)</li>
-								<li><a href = "https://www.tbp.org/home.cfm" class = "links">Tau Beta Pi</a> (Top fifth of class among all engineering majors)</li>
-								<li><a href = "https://hkn.ieee.org/" class = "links">IEEE HKN (Eta Kappa Nu)</a> (Top third of electrical and computer engineering class)</li>
+								<li>Graduated <i>cum laude</i></li>
+								<li>Selected to be a member of <a href = "https://www.tbp.org/home.cfm" class = "links">Tau Beta Pi</a> (Top fifth of class among all engineering majors)</li>
+								<li>Selected to be a member of <a href = "https://hkn.ieee.org/" class = "links">IEEE HKN (Eta Kappa Nu)</a> (Top third of class in electrical and computer engineering)</li>
 							</ul>
             </section>
 
@@ -124,7 +124,7 @@
             <section>
               <h2>Computer Science Coursework</h2>
 							<div class = "resumeContent">Data Structures, Design and Analysis of Algorithms,
-								Computer Systems
+								Computer Systems, Discrete Math
 							</div>
 
 							<h2>Electrical/ Computer Engineering Coursework</h2>
@@ -170,20 +170,22 @@
 
 						<div class = "resumeContent"><span class = "resumeHeading">The Boeing Company</span>
 							<div class = "resumeLocation">St. Louis, MO</div>
+							<div><i>Software Engineer</i></div>
             	<span class = "resumeRight">Aug. 2017 - Present</span>
 							<ul>
 								<li>Performed regression testing for Windows, Linux, and VxWorks platforms</li>
-								<li>Experience in Agile/ Scrum methodlogy with bi-weekly stand-up meetings and two-week sprints</li>
+								<li>Worked under Agile/ Scrum methodlogy with bi-weekly sprints and daily stand-up meetings</li>
 							</ul>
 						</div>
 
 						<div class = "resumeContent"><span class = "resumeHeading">Crane Aerospace and Electronics</span>
 							<div class = "resumeLocation">Lynnwood, WA</div>
+							<div><i>Software Engineer Intern</i></div>
             	<span class = "resumeRight">Jun. 2016 - Sept. 2016</span>
 
 							<ul>
-								<li>Contributed to the development of a proximity sensor using an ARM microcontroller</li>
-								<li>Used MATLAB and an oscilloscope for signal processing testing and verification</li>
+								<li>Contributed to the development of a proximity sensor using an ARM micro-controller</li>
+								<li>Tested and verified Digital Signal Processing (DSP) results using MATLAB and an oscilloscope</li>
 								<li>Modified embedded software code in C to operate the Analog to Digital Converter (ADC) and Digital to Analog Converter (DAC) on the micro-controller</li>
 							</ul>
 						</div>
@@ -204,7 +206,7 @@
 							<span class = "resumeRight">Sept. 2016 - Jun. 2017</span>
 							<ul>
 								<li>Helped fundraise over $200 through bake sales</li>
-								<li>Mentored new officers by helping them with their roles</li>
+								<li>Mentored new officers by helping them adjust to their new roles and providing guidance</li>
 							</ul>
 						</div>
 
@@ -227,6 +229,7 @@
 							<span class = "resumeRight">Sept. 2015 - Jun. 2016</span>
 							<ul>
 								<li>Organized resume review event with about 12 engineering professionals and 40 students attending</li>
+								<li>Selected as one of ten women at Seattle University to receive funding to attend the 2015 SWE national conference</li>
 							</ul>
 						</div>
 
@@ -258,6 +261,15 @@
 						<a href = "projects.html"><button class = "projRevealBtn">See more projects <i class="fas fa-angle-double-right"></i></button></a>
 
 					</section> <!--END projects section -->
+
+
+
+					<!-- Responsive: Back to top button -->
+					<div class = "responsiveBackToTop">
+						<div class = "line"></div>
+						<br>
+						<a href = "#">Back to Top <i class="fas fa-arrow-up"></i></i></a>
+					</div>
 
   	    </div> <!-- END main content-->
   	</div>
