Photography page under construction.

--- a/photography.html
+++ b/photography.html
@@ -64,8 +64,9 @@
 	<!-- Main Content: Photography -->
   <section id = "photography" class = "mainContent">
   	<div class = "container">
+			<h1>Coming Soon . . .</h1>
 
-       <p>I have been an avid photographer since taking a high school photography class.
+    <!--   <p>I have been an avid photographer since taking a high school photography class.
          During college, I enjoyed wandering Seattle with
          my camera in tow and taking pictures of whatever caught my eye. I fell
          in love with the Pacific Northwest through photography. </p>
@@ -87,7 +88,7 @@
         <div class = "photoBox"></div>
         <div class = "photoBox"></div>
 
-      </div>
+      </div>-->
 
   	</div> <!-- END container  -->
   </section>
