Minor text changes.

--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
 					<div class = "subtitleText">Electrical and Computer Engineering</div>
 
 					<div class = "titleText">I like</div>
-					<div class = "subtitleText">Integrating Hardware and Software,
-						Embedded Devices, Internet of Things </div>
+					<div class = "subtitleText">Hardware and Software Integration,
+						Embedded Devices, and Internet of Things </div>
 
 					<div class = "titleText">Long story short</div>
-					<div class = "subtitleText">I am a recent college grad trying to learn new things.</div>
+					<div class = "subtitleText">I am a recent college grad who enjoys learning new things.</div>
 
 				</div>
 
@@ -166,7 +166,7 @@
 				<div class = "socialLinks">
 					<h1>Website by Stephanie Yip 2018</h1>
 					<ul>
-						<li><script language="Javascript">
+						<li><script>
 							var username = "stephaniekyyip";
 							var hostname = "gmail.com";
 							var subject = "E-mailing%20From%20Your%20Website";
