Done w/ general design + code structure + home page.

--- a/website_v2/_pages/contact.html
+++ b/website_v2/_pages/contact.html
@@ -2,5 +2,5 @@
 title: Contact
 permalink: /contact/
 layout: default
-jumbotron: ../assets/img/jumbotron/contactJumbotron.jpg
+jumbotron: jumbotron-contact
 ---
