--- a/website_v2/_pages/projects.html
+++ b/website_v2/_pages/projects.html
@@ -2,5 +2,5 @@
 title: Projects
 permalink: /projects/
 layout: default
-jumbotron: ../assets/img/jumbotron/projectsJumbotron.jpg
+jumbotron: jumbotron-projects
 ---
