--- a/website_v2/_pages/photography.html
+++ b/website_v2/_pages/photography.html
@@ -2,5 +2,5 @@
 title: Photography
 permalink: /photography/
 layout: default
-#jumbotron: ../assets/img/jumbotron/
+jumbotron: jumbotron-photography
 ---
