--- a/website_v2/_pages/resume.html
+++ b/website_v2/_pages/resume.html
@@ -2,5 +2,5 @@
 title: Résumé
 permalink: /resume/
 layout: default
-jumbotron: ../assets/img/jumbotron/resumeJumbotron.jpg
+jumbotron: jumbotron-resume
 ---
