Done w/ responsive design + menu.

--- a/website_v2/index.html
+++ b/website_v2/index.html
@@ -17,29 +17,19 @@ jumbotron: jumbotron-home
 <div class = "about-writing">
   <h1>Introduction</h1>
   <p>
-  I graduated from Seattle University in 2017 with a B.S. in Electrical and
-  Computer Engineering. My work experience is mainly in the aerospace industry
-  as a software engineer.
+  I graduated in 2017 with a B.S. in Computer Engineering from Seattle University.
+  So far, my work experience has mainly been in the aerospace industry as a software engineer.
   </p>
 
   <p>
   The area that fascinates me the most is the integration
   of hardware and software. I'm especially interested in projects that involve software
-  interacting with the physical world, such as in embedded devices and internet of things.
-  Lately, I've been working on side projects to learn more about full stack web development.
+  interacting with the physical world, such as in embedded devices and the internet of things.
   </p>
 
-  <!-- <p>
-  Although I have worked with hardware and circuits, I prefer working on
-  the software side of things. I have mostly used C and C++ in low-level/
-  embedded software, but I have been making an effort recently to
-  learn other programming languages and learn about other areas of software
-  engineering.
-  </p> -->
-
-  <p>I loved studying computer engineering, but my interests are not
-  limited to only my work and college experiences. I enjoy all things software and tech-related and am
-  eagar to learn more!
+  <p>
+  However, I enjoy all things software and tech-related. For example, I am currently
+  teaching myself full stack web development and am eagar to learn more!
   </p>
 
 </div>
