Minor changes (refactoring, design, text).

--- a/website_v2/index.html
+++ b/website_v2/index.html
@@ -28,7 +28,7 @@ jumbotron: jumbotron-home
   </p>
 
   <p>
-  However, I enjoy all things software and tech-related. For example, I am currently
+  That being said, I enjoy all things software and tech-related. For instance, I am currently
   teaching myself full stack web development and am eagar to learn more!
   </p>
 
