--- a/website_v2/_pages/contact.html
+++ b/website_v2/_pages/contact.html
@@ -4,3 +4,50 @@ permalink: /contact/
 layout: default
 jumbotron: jumbotron-contact
 ---
+
+<h1>Let's Chat</h1>
+
+<p>
+The best way to get in touch with me is through e-mail at
+<a href = "mailto:stephaniekyyip@gmail.com">stephaniekyyip@gmail.com</a>.
+Alternatively, you can fill out the form below. I will get back to you as soon
+as possible.
+</p>
+
+<div class = "contact-form">
+  <form method = "post" action = "https://formspree.io/stephaniekyyip@gmail.com">
+    <div class = "form-grid-container">
+      <div class = "form-name">
+        Name <br>
+        <input type = "text" name = "Name" required/>
+      </div>
+
+      <div class = "form-email">
+        Your E-mail <br>
+        <input type = "email" name = "E-mail" required/>
+      </div>
+
+      <div class = "form-msg">
+        Message <br>
+        <textarea name = "Message" required></textarea>
+      </div>
+
+      <div class = "form-submit">
+        <input type = "submit" name  = "Submit" id = "form-submit"/>
+      </div>
+    </div>
+
+    <!-- Formspree form submission values -->
+    <input type="hidden" name="_subject" value = "E-mail from your website">
+    <input type="hidden" name="_format" value="plain" />
+    <input type="text" name="_gotcha" style="display:none" />
+    <!-- <input type="hidden" name="_next" value="contactSubmit.html" /> -->
+  </form>
+</div>
+
+<!-- <div class = "responsive-form">
+  <form name = "contact-form" method = "post" action = "https://formspree.io/stephaniekyyip@gmail.com">
+
+  </form>
+
+</div> -->
