Done w/ 404 + contact form submit page.

--- a/website_v2/404.html
+++ b/website_v2/404.html
@@ -1,3 +1,12 @@
 ---
-layout: default
+title: Page not found!
+layout: no_jumbotron
 ---
+
+<div class = "large-centered">
+Page not found
+</div>
+
+<div class = "reg-centered">
+Click <a href = "/">here</a> to return to the home page.
+</div>
