Done w/ projects page + subpages.

--- a/website_v2/_pages/contact_submit.html
+++ b/website_v2/_pages/contact_submit.html
@@ -5,7 +5,7 @@ layout: no_jumbotron
 ---
 
 <div class = "large-centered">
-  Message was sent successfully!
+  Message sent!
 </div>
 
 <div class = "reg-centered">
