--- a/website_v2/_pages/projects/bookTracker.html
+++ b/website_v2/_pages/projects/bookTracker.html
@@ -2,6 +2,47 @@
 title: Book Tracker
 permalink: /projects/bookTracker
 layout: projects_page
-description: A web app that keeps track of all the books you have read.
-jumbotron:
+label: bookTracker
+github: https://github.com/stephaniekyyip/bookTracker
 ---
+
+<figure>
+  <img src= "{{ site.url }}/assets/img/projects/bookTracker/bookTrackerHomepage.png"
+  class = "proj-pg-img" alt = "Book Tracker Homepage"></img>
+  <figcaption class = "caption">
+    Home page of the app when user logs in.
+  </figcaption>
+</figure>
+
+<h1>Overview</h1>
+<p>
+  <a href = "https://still-scrubland-90743.herokuapp.com/">Book Tracker</a>
+  is a web app I created as a replacement to the spreadsheet I have
+  been using to record all the books I have read since 2008. I wanted to create something with
+  a clean and easy-to-use user interface that would allow me to not only record the
+  books I have read, but also analyze my reading habits across the past decade.
+</p>
+<p>
+  Besides creating and modifying book entries, users can also search and sort their
+  list of books. Other features include the ability to upload a CSV file to bulk add
+  book entries and an analytics page that displays the data visualizations and statistics
+  of the user's reading habits.
+</p>
+
+<h1>How the App Works</h1>
+<p>
+  In the first version of the app, I used a tech stack consisting of Apache, PHP,
+  and MySQL on the back end, and jQuery on the front end with C3.js/ D3.js
+  for data visualization. The live version of the app is hosted on Heroku.
+</p>
+<p>
+  Since this was my first web app, I chose to use technology I had used before,
+  including Apache and PHP. I decided not to use any web frameworks or libraries
+  such as React in order to understand the basics, though I eventually realized
+  why such technologies can be helpful.
+</p>
+<p>
+  Though I have created a working version of this book tracker app, I feel that
+  in a second version, I could leverage newer technologies and do better. I plan
+  to start working on version 2 of Book Tracker very soon.
+</p>
